// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`phase 3 question types > file_upload renders drop zone + snapshot 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_t_"
    >
      Upload your doc
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <input
        aria-labelledby="_r_t_"
        style="display: none;"
        type="file"
      />
      <button
        aria-describedby="_r_t_"
        class="psw-upload-zone"
        type="button"
      >
        <span
          class="psw-upload-cta"
        >
          choose a file
        </span>
        <span
          class="psw-upload-hint"
        >
          or drag and drop it here
        </span>
      </button>
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          max 
          5
           MB
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`phase 3 question types > matrix renders + snapshot, single-select per row, required blocks gaps 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_16_"
    >
      Rate each
    </h1>
    <div
      aria-labelledby="_r_16_"
      class="psw-matrix"
      style="--psw-matrix-cols: 2;"
    >
      <div
        aria-hidden="true"
        class="psw-matrix-head"
      >
        <span
          class="psw-matrix-corner"
        />
        <span
          class="psw-matrix-colhead"
        >
          Poor
        </span>
        <span
          class="psw-matrix-colhead"
        >
          Great
        </span>
      </div>
      <div
        aria-label="Quality"
        class="psw-matrix-row"
        role="radiogroup"
      >
        <span
          class="psw-matrix-rowlabel"
        >
          Quality
        </span>
        <button
          aria-checked="false"
          aria-label="Quality: Poor"
          class="psw-matrix-cell"
          role="radio"
          type="button"
        >
          <span
            aria-hidden="true"
            class="psw-matrix-dot"
          />
          <span
            class="psw-matrix-cell-label"
          >
            Poor
          </span>
        </button>
        <button
          aria-checked="false"
          aria-label="Quality: Great"
          class="psw-matrix-cell"
          role="radio"
          type="button"
        >
          <span
            aria-hidden="true"
            class="psw-matrix-dot"
          />
          <span
            class="psw-matrix-cell-label"
          >
            Great
          </span>
        </button>
      </div>
      <div
        aria-label="Speed"
        class="psw-matrix-row"
        role="radiogroup"
      >
        <span
          class="psw-matrix-rowlabel"
        >
          Speed
        </span>
        <button
          aria-checked="false"
          aria-label="Speed: Poor"
          class="psw-matrix-cell"
          role="radio"
          type="button"
        >
          <span
            aria-hidden="true"
            class="psw-matrix-dot"
          />
          <span
            class="psw-matrix-cell-label"
          >
            Poor
          </span>
        </button>
        <button
          aria-checked="false"
          aria-label="Speed: Great"
          class="psw-matrix-cell"
          role="radio"
          type="button"
        >
          <span
            aria-hidden="true"
            class="psw-matrix-dot"
          />
          <span
            class="psw-matrix-cell-label"
          >
            Great
          </span>
        </button>
      </div>
    </div>
    <div
      class="psw-actions"
    >
      <button
        class="psw-ok-btn"
        type="button"
      >
        OK 
        <span
          aria-hidden="true"
        >
          ✓
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`phase 3 question types > picture_choice renders the image grid + snapshot 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_12_"
    >
      Pick a pet
    </h1>
    <div
      aria-labelledby="_r_12_"
      class="psw-picture-grid"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="psw-picture"
        role="radio"
        type="button"
      >
        <img
          alt="Cat"
          class="psw-picture-img"
          src="https://example.com/cat.jpg"
        />
        <span
          class="psw-picture-caption"
        >
          <span
            class="psw-choice-badge"
          >
            A
          </span>
          <span>
            Cat
          </span>
        </span>
      </button>
      <button
        aria-checked="false"
        class="psw-picture"
        role="radio"
        type="button"
      >
        <img
          alt="Dog"
          class="psw-picture-img"
          src="https://example.com/dog.jpg"
        />
        <span
          class="psw-picture-caption"
        >
          <span
            class="psw-choice-badge"
          >
            B
          </span>
          <span>
            Dog
          </span>
        </span>
      </button>
      <button
        aria-checked="false"
        class="psw-picture"
        role="radio"
        type="button"
      >
        <img
          alt="Bird"
          class="psw-picture-img"
          src="https://example.com/bird.jpg"
        />
        <span
          class="psw-picture-caption"
        >
          <span
            class="psw-choice-badge"
          >
            C
          </span>
          <span>
            Bird
          </span>
        </span>
      </button>
    </div>
    <p
      class="psw-hint"
      style="margin-top: 20px;"
    >
      tap a key (A, B, C) or click to select
    </p>
  </div>
</div>
`;

exports[`phase 3 question types > ranking renders + snapshot, reorders via buttons, submits full order 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_15_"
    >
      Rank these
    </h1>
    <ol
      aria-labelledby="_r_15_"
      class="psw-ranking"
    >
      <li
        class="psw-ranking-row"
        draggable="true"
      >
        <span
          class="psw-ranking-pos"
        >
          1
        </span>
        <span
          class="psw-ranking-label"
        >
          Alpha
        </span>
        <span
          class="psw-ranking-controls"
        >
          <button
            aria-label="Move Alpha up"
            class="psw-ranking-btn"
            disabled=""
            type="button"
          >
            ↑
          </button>
          <button
            aria-label="Move Alpha down"
            class="psw-ranking-btn"
            type="button"
          >
            ↓
          </button>
        </span>
      </li>
      <li
        class="psw-ranking-row"
        draggable="true"
      >
        <span
          class="psw-ranking-pos"
        >
          2
        </span>
        <span
          class="psw-ranking-label"
        >
          Beta
        </span>
        <span
          class="psw-ranking-controls"
        >
          <button
            aria-label="Move Beta up"
            class="psw-ranking-btn"
            type="button"
          >
            ↑
          </button>
          <button
            aria-label="Move Beta down"
            class="psw-ranking-btn"
            type="button"
          >
            ↓
          </button>
        </span>
      </li>
      <li
        class="psw-ranking-row"
        draggable="true"
      >
        <span
          class="psw-ranking-pos"
        >
          3
        </span>
        <span
          class="psw-ranking-label"
        >
          Gamma
        </span>
        <span
          class="psw-ranking-controls"
        >
          <button
            aria-label="Move Gamma up"
            class="psw-ranking-btn"
            type="button"
          >
            ↑
          </button>
          <button
            aria-label="Move Gamma down"
            class="psw-ranking-btn"
            disabled=""
            type="button"
          >
            ↓
          </button>
        </span>
      </li>
    </ol>
    <div
      class="psw-actions"
    >
      <button
        class="psw-ok-btn"
        type="button"
      >
        OK 
        <span
          aria-hidden="true"
        >
          ✓
        </span>
      </button>
      <span
        class="psw-hint"
      >
        drag rows or use ↑↓ to reorder
      </span>
    </div>
  </div>
</div>
`;

exports[`question types render > date 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_9_"
    >
      When?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <div
        aria-labelledby="_r_9_"
        class="psw-date-row"
        role="group"
      >
        <input
          aria-invalid="false"
          aria-label="Month"
          class="psw-input psw-date-seg"
          inputmode="numeric"
          placeholder="MM"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="psw-date-sep"
        >
          /
        </span>
        <input
          aria-invalid="false"
          aria-label="Day"
          class="psw-input psw-date-seg"
          inputmode="numeric"
          placeholder="DD"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="psw-date-sep"
        >
          /
        </span>
        <input
          aria-invalid="false"
          aria-label="Year"
          class="psw-input psw-date-seg psw-date-seg--year"
          inputmode="numeric"
          placeholder="YYYY"
          type="text"
          value=""
        />
      </div>
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          press Enter ↵
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > dropdown 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_a_"
    >
      State?
    </h1>
    <div
      style="margin-top: 24px; position: relative;"
    >
      <input
        aria-autocomplete="list"
        aria-controls="_r_b_"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="_r_a_"
        autocomplete="off"
        class="psw-input"
        placeholder="Type or select an option..."
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          type to filter, ↑↓ + Enter to select
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > email 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_2_"
    >
      Email?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <input
        aria-invalid="false"
        aria-labelledby="_r_2_"
        autocomplete="email"
        class="psw-input"
        inputmode="email"
        placeholder="name@example.com"
        type="email"
        value=""
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          press Enter ↵
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > legal 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_d_"
    >
      Accept terms?
    </h1>
    <p
      class="psw-subtitle"
    >
      The fine print.
    </p>
    <div
      aria-labelledby="_r_d_"
      class="psw-choices"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="psw-choice"
        role="radio"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          A
        </span>
        <span>
          I accept
        </span>
      </button>
      <button
        aria-checked="false"
        class="psw-choice"
        role="radio"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          B
        </span>
        <span>
          I don't accept
        </span>
      </button>
    </div>
    <p
      class="psw-hint"
      style="margin-top: 20px;"
    >
      tap a key (A, B) or click to select
    </p>
  </div>
</div>
`;

exports[`question types render > long_text 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_1_"
    >
      Notes?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <textarea
        aria-invalid="false"
        aria-labelledby="_r_1_"
        class="psw-input"
        placeholder="Type your answer..."
        rows="3"
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          Shift + Enter for new line
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > multi_choice 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_6_"
    >
      Add-ons?
    </h1>
    <div
      aria-labelledby="_r_6_"
      class="psw-choices"
      role="group"
    >
      <button
        aria-checked="false"
        class="psw-choice"
        role="checkbox"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          A
        </span>
        <span>
          A
        </span>
      </button>
      <button
        aria-checked="false"
        class="psw-choice"
        role="checkbox"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          B
        </span>
        <span>
          B
        </span>
      </button>
    </div>
    <div
      class="psw-actions"
    >
      <button
        class="psw-ok-btn"
        type="button"
      >
        OK 
        <span
          aria-hidden="true"
        >
          ✓
        </span>
      </button>
      <span
        class="psw-hint"
      >
        tap keys to toggle, OK to continue
      </span>
    </div>
  </div>
</div>
`;

exports[`question types render > nps 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_e_"
    >
      Recommend us?
    </h1>
    <div
      aria-labelledby="_r_e_"
      class="psw-scale"
      role="radiogroup"
    >
      <div
        class="psw-scale-row"
      >
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          0
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          1
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          2
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          3
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          4
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          5
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          6
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          7
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          8
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          9
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          10
        </button>
      </div>
      <div
        class="psw-scale-labels"
      >
        <span>
          Not at all likely
        </span>
        <span>
          Extremely likely
        </span>
      </div>
    </div>
    <div
      class="psw-actions"
    >
      <span
        class="psw-hint"
      >
        press a number ↑
      </span>
    </div>
  </div>
</div>
`;

exports[`question types render > number 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_4_"
    >
      Sq ft?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <input
        aria-invalid="false"
        aria-labelledby="_r_4_"
        class="psw-input"
        inputmode="decimal"
        pattern="[0-9]*[.]?[0-9]*"
        placeholder="0"
        type="text"
        value=""
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          press Enter ↵
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > phone 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_3_"
    >
      Phone?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <input
        aria-invalid="false"
        aria-labelledby="_r_3_"
        autocomplete="tel"
        class="psw-input"
        inputmode="tel"
        placeholder="(555) 123-4567"
        type="tel"
        value=""
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          press Enter ↵
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > scale 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_7_"
    >
      Urgency?
    </h1>
    <div
      aria-labelledby="_r_7_"
      class="psw-scale"
      role="radiogroup"
    >
      <div
        class="psw-scale-row"
      >
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          1
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          2
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          3
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          4
        </button>
        <button
          aria-checked="false"
          class="psw-scale-cell"
          role="radio"
          type="button"
        >
          5
        </button>
      </div>
      <div
        class="psw-scale-labels"
      >
        <span>
          chill
        </span>
        <span>
          asap
        </span>
      </div>
    </div>
    <div
      class="psw-actions"
    >
      <span
        class="psw-hint"
      >
        press a number ↑
      </span>
    </div>
  </div>
</div>
`;

exports[`question types render > short_text 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_0_"
    >
      Name?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <input
        aria-invalid="false"
        aria-labelledby="_r_0_"
        autocomplete="off"
        class="psw-input"
        placeholder="Jane"
        type="text"
        value=""
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          press Enter ↵
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > single_choice 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_5_"
    >
      Service?
    </h1>
    <div
      aria-labelledby="_r_5_"
      class="psw-choices"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="psw-choice"
        role="radio"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          A
        </span>
        <span>
          One
        </span>
      </button>
      <button
        aria-checked="false"
        class="psw-choice"
        role="radio"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          B
        </span>
        <span>
          Two
          <span
            class="psw-choice-desc"
          >
            the second
          </span>
        </span>
      </button>
    </div>
    <p
      class="psw-hint"
      style="margin-top: 20px;"
    >
      tap a key (A, B, C, D) or click to select
    </p>
  </div>
</div>
`;

exports[`question types render > statement 1`] = `
<div>
  <div>
    <h1
      class="psw-title"
    >
      Quick note
    </h1>
    <p
      class="psw-subtitle"
    >
      We never share your data.
    </p>
    <button
      class="psw-cta"
      type="button"
    >
      Continue
      <span
        class="psw-cta-hint"
      >
        press Enter ↵
      </span>
    </button>
  </div>
</div>
`;

exports[`question types render > thanks 1`] = `
<div>
  <div>
    <h1
      class="psw-title"
    >
      Done.
    </h1>
    <p
      class="psw-subtitle"
    >
      Talk soon.
    </p>
    <div
      style="margin-top: 24px;"
    />
  </div>
</div>
`;

exports[`question types render > url 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_8_"
    >
      Website?
    </h1>
    <div
      style="margin-top: 24px;"
    >
      <input
        aria-invalid="false"
        aria-labelledby="_r_8_"
        autocapitalize="off"
        autocomplete="url"
        class="psw-input"
        inputmode="url"
        placeholder="https://example.com"
        spellcheck="false"
        type="text"
        value=""
      />
      <div
        class="psw-actions"
      >
        <button
          class="psw-ok-btn"
          type="button"
        >
          OK 
          <span
            aria-hidden="true"
          >
            ✓
          </span>
        </button>
        <span
          class="psw-hint"
        >
          press Enter ↵
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`question types render > welcome 1`] = `
<div>
  <div>
    <h1
      class="psw-title"
    >
      Hello.
    </h1>
    <p
      class="psw-subtitle"
    >
      Welcome aboard
    </p>
    <button
      class="psw-cta"
      type="button"
    >
      Begin
      <span
        class="psw-cta-hint"
      >
        press Enter ↵
      </span>
    </button>
  </div>
</div>
`;

exports[`question types render > yes_no 1`] = `
<div>
  <div
    class="psw-step-badge"
  >
    <span>
      01
    </span>
    <span
      class="psw-step-sep"
    >
      →
    </span>
  </div>
  <div>
    <h1
      class="psw-title"
      id="_r_c_"
    >
      Insured?
    </h1>
    <div
      aria-labelledby="_r_c_"
      class="psw-choices"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="psw-choice"
        role="radio"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          Y
        </span>
        <span>
          Yes
        </span>
      </button>
      <button
        aria-checked="false"
        class="psw-choice"
        role="radio"
        type="button"
      >
        <span
          class="psw-choice-badge"
        >
          N
        </span>
        <span>
          No
        </span>
      </button>
    </div>
    <p
      class="psw-hint"
      style="margin-top: 20px;"
    >
      press Y or N, or click to select
    </p>
  </div>
</div>
`;
